--- a/blackList/toDo
+++ b/blackList/toDo
@@ -1,6 +1,10 @@
+Замутить airbafresh 2 XD
+
+
+
 !1
 Создавать таблицу для каждой категорий либо искать вариант переиспользования таблицы
-
+// неудобно использовать категорий // добавить просмотр всех категорий //
 
 
 №1
